# caesar-sims

./: .gitignore  BENCHMARK-REPORT.md  CAES-NGauge-sim.md  CAES-NGauge.md  CORE_CAES_REFACTOR.md  PUBLIC_WHITEPAPER_MOD.md
arena-sim/engine/: Cargo.toml  arena-export-1771649681906.json  arena-export-1771793459062.json
arena-sim/engine/benchmark-results/: bench-1771832440342.json  bench-1771832452517.json  bench-1771832783735.json  bench-1771833526005.json  bench-1771833563091.json  bench-1771833580394.json  bench-1771833669783.json  bench-1771834991923.json  bench-1771835591571.json  bench-1771836136186.json  bench-1771836396562.json  bench-1771845197034.json  bench-1771845204351.json  bench-1771845208631.json  bench-1771845480612.json  bench-1771845502621.json  bench-1771845543663.json  bench-1771845560121.json  bench-1771845603156.json  bench-1771845660402.json  bench-1771845918641.json  bench-1771846575025.json
arena-sim/engine/benchmark-results/time-series/normal_market/: seed-0.jsonl
arena-sim/engine/src/: adapter.rs  conservation.rs  core_conservation.rs  core_fee_distribution.rs  core_models.rs  core_routing.rs  core_types.rs  dissolution.rs  engauge.rs  governor.rs  lib.rs  routing.rs  simulation.rs  types.rs
arena-sim/engine/src/core_governor/: mod.rs  params.rs  pid.rs
arena-sim/engine/tests/: simulation_tests.rs
arena-sim/ui/: arena-export-1771796138638.json  arena-export-1771800658620.json  arena-export-1771813322132.json  arena-export-1771816587442.json  package-lock.json  package.json
bench_reports/: 01_discovery_analysis.md  01_results.md
(+7 files in other folders)
