[package]
name = "arena-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.5"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]

wasm-bindgen-test = "0.3"



[package.metadata.wasm-pack.profile.release]

wasm-opt = false
