[package]
name = "arena-engine"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
num-traits = "0.2"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "bench"
path = "src/bin/bench/main.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = "thin"
panic = "abort"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
